<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General -->
    <string name="app_name">PodHoarder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    
    <!-- Player tab -->
    <string name="player_tab">Player</string>
    <string name="fragment_player_playlist_header">Playlist</string>
    
    <!-- Feed tab -->
    <string name="feed_tab">Podcasts</string>
    <string name="fragment_feed_list_add_row">Add New Podcast</string>
    <string name="fragment_feeds_list_feed_row_deleteBtn">Delete</string>
    
    <!-- Feed Details Fragment -->
    <string name="fragment_feed_details_swipe_up_hint">Swipe up for Podcast episodes.</string>
    <string name="fragment_feed_details_swipe_down_hint">Swipe down for Podcast details.</string>
    
    <!-- Latest Episodes tab -->
    <string name="episodes_tab">Episodes</string>
    <string name="fragment_latest_list_row_new">NEW!</string>
    
    <!-- Search Fragment -->
    <string name="search_hint">Search</string>
    <string name="search_list_feed_last_updated">Last update</string>
    <string name="search_list_feed_last_updated_unknown">unknown</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    
    <string name="pref_group_player_title">Player Settings</string>
    
    <string name="pref_deleteListened_title">Delete Finished Episodes</string>
    <string name="pref_deleteListened_summary">Automatically delete downloaded episodes once you have listened to their full duration.</string>
    
    <string name="pref_playNextFile_title">Play Next File</string>
    <string name="pref_playNextFile_summary">Enable to keep playing through the playlist once an episode has ended.</string>
    
    <string name="pref_group_ui_title">UI Options</string>
    
    <string name="pref_gridShowTitle_title">Show Podcast Titles In Grid</string>
    <string name="pref_gridShowTitle_summary">Disable to hide the text overlay in the podcast grid view.</string>
    
    <string name="pref_startTab_title">Default View</string>
    <string name="pref_startTab_dialogTitle">Select Default View</string>
    <string name="pref_startTab_summary">Select which view to show when first starting the app.</string>
    
    <!-- Feed Context Menu -->
    <string name="menu_feed_refresh">Refresh Podcast</string>
    <string name="menu_feed_markAsListened">Mark Episodes As Listened</string>
    <string name="menu_feed_delete">Delete Podcast</string>
    
    <!-- Episode Context Menu -->
    <string name="menu_episode_add_playlist">Add To Playlist</string>
    <string name="menu_episode_available_offline">Make Available Offline</string>
    <string name="menu_episode_play_now">Play Now</string>
    <string name="menu_episode_deleteFile">Delete File</string>
    <string name="menu_episode_markAsListened">Mark As Listened</string>
    
    <!-- Playlist Context Menu -->
    <string name="menu_playlist_delete">Remove From Playlist</string>
    <string name="menu_playlist_startOver">Play From Beginning</string>
    <string name="menu_playlist_available_offline">Make Available Offline</string>
    
    <!-- Search Context Menu -->
    <string name="menu_search_add">Add Podcast(s)</string>
    
    <!-- Add Feed Popup Window -->
    <string name="popup_window_title_single">Add Podcast?</string>
    <string name="popup_window_title_multiple">Add Podcasts?</string>
    <string name="popup_areyousure">Are you sure you want to add</string>
    <string name="popup_podcasts">podcasts</string>
    <string name="popup_window_ok_button">Yes</string>
    <string name="popup_window_cancel_button">No</string>
    
    <!--  Notifications -->
    <string name="notification_download_in_progress">Downloading</string>
    <string name="notification_playing">Playing</string>
    <string name="notification_paused">Paused</string>
    <string name="notification_by">by</string>
    
    <!-- Toast Notifications -->
    <string name="toast_downloading_podcast">Downloading Episode(s)!</string>
    <string name="toast_added_to_playlist">Episode(s) Added To Playlist!</string>
    <string name="toast_feeds_refreshed_successful">Refresh done!</string>
    <string name="toast_feeds_refreshed_failed">Refresh failed!</string>
    <string name="toast_player_playback_failed">Playback failed!</string>
    <string name="toast_download_failed">Download failed!</string>
    <string name="toast_add_feed_failed">Failed To Add Podcast!</string>
    
    <!-- Contextual Action Mode Bar-->
    <string name="contextual_action_mode_single_podcast_selected">podcast selected.</string>
    <string name="contextual_action_mode_multiple_podcasts_selected">podcasts selected.</string>
    <string name="contextual_action_mode_single_episode_selected">episode selected.</string>
    <string name="contextual_action_mode_multiple_episodes_selected">episodes selected.</string>
    <string name="contextual_action_mode_selected">selected.</string>
    
</resources>