<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_episode_play_now"
          android:title="@string/menu_episode_play_now"
          android:icon="@drawable/ic_action_play" />
    <item android:id="@+id/menu_episode_add_playlist"
          android:title="@string/menu_episode_add_playlist" 
          android:icon="@drawable/ic_action_new"/>
    <item android:id="@+id/menu_episode_markAsListened"
          android:title="@string/menu_episode_markAsListened"
          android:icon="@drawable/ic_action_accept" />
    <item android:id="@+id/menu_episode_available_offline"
          android:title="@string/menu_episode_available_offline"
          android:icon="@drawable/ic_action_download" />
    <item android:id="@+id/menu_episode_deleteFile"
          android:title="@string/menu_episode_deleteFile"
          android:icon="@drawable/ic_action_discard" />
</menu>
